--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-grid-layout": "^1.4.4",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.1",
+    "rss-parser": "^3.13.0",
     "server-only": "^0.0.1",
     "sonner": "^1.5.0",
     "superjson": "^2.2.1",
