--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "drizzle-orm": "^0.33.0",
+    "framer-motion": "^11.3.31",
     "geist": "^1.3.0",
     "lucide-react": "^0.436.0",
     "next": "^14.2.4",
